# JobRadar

./: .coverage  .gitignore  README.md  pyproject.toml
docs/: er-diagram.md  tech-specs-module-1.md
experiments/: benchmark_decode_stats.py  check_consistency.py  compare_codec_performance.py  show_tokens.py
scripts/: collect_vacancies.py
src/job_hunter/: config.py  database.py  main.py
src/job_hunter/cli/: app.py
src/job_hunter/services/: manager.py
src/job_radar/: config.py  database.py  main.py
src/job_radar/cli/: app.py
src/job_radar/models/: log.py  source.py  task.py  vacancy.py
src/job_radar/services/: crawler.py  manager.py  parser.py
src/job_radar/services/index/: benchmark.py  codec.py  codec_bitarray.py  inverted_index.py
tests/: conftest.py  test_config.py
tests/test_cli/: test_cli_module2.py  test_commands.py
tests/test_models/: test_log.py  test_source.py  test_task.py  test_task_timestamps.py  test_vacancy.py
tests/test_services/: test_crawler.py  test_crawler_utils.py  test_manager.py  test_manager_module2.py
tests/test_services/test_index/: test_codec.py  test_codec_bitarray.py  test_index_cli.py  test_inverted_index.py
