[tool.poetry]
name = "job-radar"
version = "0.1.0"
description = "Vacancy Aggregator System"
authors = ["Student Name <student@university.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.14"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
